--- a/sfsb/package.json
+++ b/sfsb/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "file-saver": "^2.0.5",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-axios": "^3.5.2",
