--- a/sfsb/package.json
+++ b/sfsb/package.json
@@ -9,10 +9,13 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "file-saver": "^2.0.5",
+    "mammoth": "^1.6.0",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.0",
+    "vue-toast-notification": "^3.1.1",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.0.0",
     "vuex": "^4.1.0",
     "webfontloader": "^1.0.0"
