--- a/sfsb/Dockerfile
+++ b/sfsb/Dockerfile
@@ -3,7 +3,7 @@ FROM --platform=linux/amd64 node:18.16.0-alpine AS build-stage
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
-COPY ./ .cd
+COPY ./ ./
 RUN npm run build
 
 # Фаза продакшена
