--- a/sfsb/package.json
+++ b/sfsb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sfsb",
-  "version": "0.0.0",
+  "version": "0.1.2",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "file-saver": "^2.0.5",
+    "keycloak-js": "^22.0.5",
     "mammoth": "^1.6.0",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
