--- a/sfsb/package.json
+++ b/sfsb/package.json
@@ -2,7 +2,7 @@
   "name": "sfsb",
   "version": "0.1.2",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "axios": "^1.4.0",
+    "material-design-icons-iconfont": "^6.7.0",
     "sass": "^1.69.5",
     "vite": "^4.2.0",
     "vite-plugin-vuetify": "^1.0.0"
