--- a/sfsb/package.json
+++ b/sfsb/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@types/node": "^20.10.4",
     "file-saver": "^2.0.5",
     "keycloak-js": "^22.0.5",
     "mammoth": "^1.6.0",
@@ -25,6 +26,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "axios": "^1.4.0",
     "material-design-icons-iconfont": "^6.7.0",
+    "pug": "^3.0.2",
     "sass": "^1.69.5",
     "vite": "^4.2.0",
     "vite-plugin-vuetify": "^1.0.0"
