--- a/sfsb/package.json
+++ b/sfsb/package.json
@@ -12,6 +12,7 @@
     "file-saver": "^2.0.5",
     "keycloak-js": "^22.0.5",
     "mammoth": "^1.6.0",
+    "pinia": "^2.1.7",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-axios": "^3.5.2",
