--- a/sfsb/package.json
+++ b/sfsb/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docker": "docker build -t voskanvl/sfsb-front:0.1.5 . && docker push voskanvl/sfsb-front:0.1.5"
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
