--- a/sfsb/package.json
+++ b/sfsb/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sfsb",
   "version": "0.1.5",
+  "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
