--- a/sfsb/package.json
+++ b/sfsb/package.json
@@ -26,6 +26,7 @@
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@vitejs/plugin-vue": "^4.0.0",
     "axios": "^1.4.0",
     "material-design-icons-iconfont": "^6.7.0",
