--- a/sfsb/default.conf
+++ b/sfsb/default.conf
@@ -7,7 +7,7 @@ server {
 
     server_tokens  off; # disable the Server nginx header
 
-    server_name _; # all hostnames
+    server_name ra58.ru; # all hostnames
 
     # enable gzip
     gzip on;
