--- a/sfsb/package.json
+++ b/sfsb/package.json
@@ -16,6 +16,7 @@
     "mammoth": "^1.6.0",
     "pinia": "^2.1.7",
     "roboto-fontface": "*",
+    "typescript": "^5.3.3",
     "vue": "^3.4.8",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.0",
