--- a/sfsb/package.json
+++ b/sfsb/package.json
@@ -17,7 +17,7 @@
     "pinia": "^2.1.7",
     "roboto-fontface": "*",
     "typescript": "^5.3.3",
-    "vue": "^3.4.8",
+    "vue": "^3.4.15",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.0",
     "vue-toast-notification": "^3.1.1",
@@ -33,7 +33,8 @@
     "material-design-icons-iconfont": "^6.7.0",
     "pug": "^3.0.2",
     "sass": "^1.69.5",
-    "vite": "^4.2.0",
-    "vite-plugin-vuetify": "^1.0.0"
+    "vite": "^4.5.2",
+    "vite-plugin-vuetify": "^1.0.0",
+    "vue-tsc": "^1.8.27"
   }
 }
