--- a/sfsb/package.json
+++ b/sfsb/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^4.0.0",
     "vue-toast-notification": "^3.1.1",
     "vue-toastification": "^2.0.0-rc.5",
+    "vuedraggable": "^4.1.0",
     "vuetify": "^3.5.3",
     "vuex": "^4.1.0",
     "webfontloader": "^1.0.0"
