--- a/sfsb/package.json
+++ b/sfsb/package.json
@@ -20,6 +20,7 @@
     "vue": "^3.4.15",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.0",
+    "vue-the-mask": "^0.11.1",
     "vue-toast-notification": "^3.1.1",
     "vue-toastification": "^2.0.0-rc.5",
     "vuedraggable": "^4.1.0",
@@ -37,6 +38,7 @@
     "sass": "^1.69.5",
     "vite": "^4.5.2",
     "vite-plugin-vuetify": "^1.0.0",
+    "vls": "^0.8.5",
     "vue-tsc": "^1.8.27"
   }
 }
